	This means that the output from "set table" matches the input data
	whereas before any line marked "u" contained garbage in the data fields.

	Note: For 3D data z=NaN or z=Inf is replaced by z=0.  This is needed to
	avoid problems with image data.  Possibly this special case should be
	handled in the image code itself rather than at the input stage.

2014-05-06  Ethan A Merritt  <merritt@u.washington.edu>

	* term/emf.trm: Custom dashtype support.

	* configure.in term/pdf.trm: Modify PDFlib terminal for use with 
	version 5 dashtypes (but no custom dashtype support).  Do not build
	by default.

2014-05-05  Ethan A Merritt  <merritt@u.washington.edu>

	* src/gp_types.h src/graphics.c (place_objects do_rectangle)
	src/misc.c (lp_parse) src/save.c (save_object) src/set.c (set_obj):
	Allow object borders to have a full set of line properties including
	dashtype.

	* docs/gnuplot.doc: Update documentation to better describe recent
	changes.

	* src/qtterminal/QtGnuplotScene.cpp: Always use a solid line to draw
	point symbols, even if the current linetype has a dash pattern.

	* term/cairo.trm term/canvas.trm term/post.trm term/svg.trm term/wxt.trm
	term/x11.trm src/term.c:  Terminals that have been upgraded to version 5
	dash handling should ignore the "dashed/solid" terminal setting.

	* src/plot2d.c (impulse_range_fiddling) src/plot3d.c:  Autoscaled plots
	"with impulses" should include y=0 (z=0 in 3D).

2014-05-05  Tatsuro MATSUOKA <tmacchant3@yahoo.co.jp>

	* src/qtterminal/po/qtgnuplot_ja.ts: Update translations

2014-05-03  Ethan A Merritt  <merritt@u.washington.edu>

	* src/qtterminal/po/qtgnuplot_ja.ts: Update translations.

2014-05-01  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* config/mingw/Makefile (LDFLAGS2): Add auto-import flag.
	($(TARGET)): Add icon files and Makefile as dependencies.

	* config/config.mgw, config/config.cyg: The set of used /
	available configuration macros has changed across the past several
	years.
